Update and rename edits.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
+<h1>Brochure Design websites</h1>
 <p>Source website: <a href="http://www.bifoldbrochure.com">Bifold Brochure</a></p>
 </html>
